--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,1 +1,65 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@500;600&display=swap');
+
+html, body{
+    background-color: hsl(210, 46%, 95%);
+    font-size: 13px;
+    font-family: 'Barlow Semi Condensed', sans-serif;
+    color: hsl(0, 0%, 81%);
+}
+
+body{
+    display: flex;
+    justify-content: center;
+}
+
+main{
+    max-width: 350px;
+    display: grid;
+    grid-column: 1fr;
+    padding: 3rem 1.5rem;
+    gap: 1rem;
+}
+
+.card{
+    background-color: hsl(263, 55%, 52%);
+    padding: 2rem;
+    border-radius: 10px;
+}
+
+.bg-grey-blue{
+    background-color: hsl(217, 19%, 35%);
+}
+
+.bg-black-blue{
+    background-color: hsl(219, 29%, 14%);
+}
+
+
+.profile{
+    display: flex;    
+}
+.user-info > h3,h4{
+    margin: 0;
+}
+.profile-pic{
+    padding: 0 1rem;
+}
+.profile-pic > img{
+    border-radius: 50%;
+    height: 2.5rem;
+}
+
+.user-info > h4{
+    color: rgba(236, 242, 248,50%);
+}
+
+.testimonial > p{
+    color: rgba(236, 242, 248,30%);
+}
+
+.bg-white > h2 {
+    color: hsl(219, 29%, 14%);
+}
+.bg-white{
+    background-color: hsl(0, 0%, 100%);
+}
