--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -4,7 +4,7 @@ html, body{
     background-color: hsl(210, 46%, 95%);
     font-size: 13px;
     font-family: 'Barlow Semi Condensed', sans-serif;
-    color: hsl(0, 0%, 81%);
+    color: rgb(255, 255, 255);
 }
 
 body{
@@ -15,9 +15,13 @@ body{
 main{
     max-width: 350px;
     display: grid;
-    grid-column: 1fr;
+    grid-template-columns: 1fr;
     padding: 3rem 1.5rem;
     gap: 1rem;
+}
+
+p{
+    line-height: 1.5rem;
 }
 
 .card{
@@ -50,11 +54,11 @@ main{
 }
 
 .user-info > h4{
-    color: rgba(236, 242, 248,50%);
+    color: rgba(255, 255, 255,50%);
 }
 
 .testimonial > p{
-    color: rgba(236, 242, 248,30%);
+    color: rgba(255, 255, 255,30%);
 }
 
 .bg-white > h2 {
@@ -62,4 +66,46 @@ main{
 }
 .bg-white{
     background-color: hsl(0, 0%, 100%);
+    color: hsl(219, 29%, 14%);
+}
+/* Need to overwrite some colors for white background */
+.bg-white > .profile > .user-info > h4{
+    color:  rgba(0, 0, 0,50%);
+}
+.bg-white > .testimonial > p{
+    color:  rgba(0, 0, 0,50%);
+}
+
+@media only screen and (min-width: 750px){
+    main{
+        max-width: 1440px;
+        display: grid;
+        grid-template-columns: repeat(4,1fr);
+        grid-auto-rows: minmax(min-content, max-content);
+        gap: 2rem;
+    }
+    .card{
+        padding: 1.5rem;
+    }
+    .card:nth-child(1){
+        grid-row: 1/2;
+        grid-column: 1/3;
+    }
+    .card:nth-child(2){
+        grid-row: 1/2;
+        grid-column: 3/4;
+    }
+    .card:nth-child(3){
+        grid-row: 2/3;
+        grid-column: 1/2;
+    }
+    .card:nth-child(4){
+        grid-row: 2/3;
+        grid-column: 2/4;
+    }
+    .card:nth-child(5){
+        grid-row: 1/3;
+        grid-column: 4/5;
+    }
+
 }
