--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -30,6 +30,14 @@ p{
     border-radius: 10px;
 }
 
+.card:nth-child(1) > .profile > .profile-pic > img{
+    border: .15rem solid  rgba(255, 255, 255,50%);
+}
+
+.card:nth-child(4) > .profile > .profile-pic > img{
+    border: .15rem solid  hsl(263, 55%, 52%);
+}
+
 .bg-grey-blue{
     background-color: hsl(217, 19%, 35%);
 }
@@ -81,6 +89,7 @@ p{
         max-width: 1440px;
         display: grid;
         grid-template-columns: repeat(4,1fr);
+        /* grid-template-rows: 1fr 1fr; */
         grid-auto-rows: minmax(min-content, max-content);
         gap: 2rem;
     }
