--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@500;600&display=swap');
 
 html, body{
+    min-height: 100vh;
     background-color: hsl(210, 46%, 95%);
     font-size: 13px;
     font-family: 'Barlow Semi Condensed', sans-serif;
@@ -10,6 +11,8 @@ html, body{
 body{
     display: flex;
     justify-content: center;
+    align-items: center;
+
 }
 
 main{
@@ -84,9 +87,9 @@ p{
     color:  rgba(0, 0, 0,50%);
 }
 
-@media only screen and (min-width: 750px){
+@media only screen and (min-width: 1024px){
     main{
-        max-width: 1440px;
+        max-width: 1300px;
         display: grid;
         grid-template-columns: repeat(4,1fr);
         /* grid-template-rows: 1fr 1fr; */
